// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`指定颜色 1`] = `
Array [
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu bytDgf sinoui-button"
    color="secondary"
    role="button"
    type="button"
  >
    文本按钮
  </button>,
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu liHSUG sinoui-button sinoui-button--outlined"
    color="secondary"
    role="button"
    type="button"
  >
    轮廓按钮
  </button>,
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu dKpPVe sinoui-button sinoui-button--raised"
    color="secondary"
    role="button"
    type="button"
  >
    容器按钮
  </button>,
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu idiGdx sinoui-button"
    color="textPrimary"
    role="button"
    type="button"
  >
    文本按钮
  </button>,
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu jwceCw sinoui-button sinoui-button--outlined"
    color="textPrimary"
    role="button"
    type="button"
  >
    轮廓按钮
  </button>,
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu hqGcns sinoui-button sinoui-button--raised"
    color="textPrimary"
    role="button"
    type="button"
  >
    容器按钮
  </button>,
]
`;

exports[`正确渲染三种形式按钮 1`] = `
Array [
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu kiyJuI sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    文本按钮
  </button>,
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu jIBlZl sinoui-button sinoui-button--outlined"
    color="primary"
    role="button"
    type="button"
  >
    轮廓按钮
  </button>,
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu eMrUpS sinoui-button sinoui-button--raised"
    color="primary"
    role="button"
    type="button"
  >
    容器按钮
  </button>,
]
`;

exports[`渲染不可用状态下的三种形式按钮 1`] = `
Array [
  <button
    aria-disabled={true}
    className="sc-bdnylx hVwUlX sinoui-base-button sc-gtssRu gsbvrv sinoui-button"
    color="primary"
    disabled={true}
    role="button"
    type="button"
  >
    文本按钮
  </button>,
  <button
    aria-disabled={true}
    className="sc-bdnylx hVwUlX sinoui-base-button sc-gtssRu bmZWNa sinoui-button sinoui-button--outlined"
    color="primary"
    disabled={true}
    role="button"
    type="button"
  >
    轮廓按钮
  </button>,
  <button
    aria-disabled={true}
    className="sc-bdnylx hVwUlX sinoui-base-button sc-gtssRu eIvZBx sinoui-button sinoui-button--raised"
    color="primary"
    disabled={true}
    role="button"
    type="button"
  >
    容器按钮
  </button>,
]
`;

exports[`渲染带图标按钮 1`] = `
Array [
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu kiyJuI sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        fill="currentColor"
      />
    </svg>
    icon
  </button>,
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu imKIgJ sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    icon
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        fill="currentColor"
      />
    </svg>
  </button>,
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu jIBlZl sinoui-button sinoui-button--outlined"
    color="primary"
    role="button"
    type="button"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        fill="currentColor"
      />
    </svg>
    icon
  </button>,
  <button
    className="sc-bdnylx gHBxYK sinoui-base-button sc-gtssRu eMrUpS sinoui-button sinoui-button--raised"
    color="primary"
    role="button"
    type="button"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        fill="currentColor"
      />
    </svg>
    icon
  </button>,
]
`;
